--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 	<properties>
 		<java.version>17</java.version>
         <camunda.version>7.24.0</camunda.version>
+        <spring-zeebe.version>8.1.5</spring-zeebe.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -46,12 +47,17 @@
             <artifactId>camunda-bpm-spring-boot-starter</artifactId>
             <version>${camunda.version}</version>
         </dependency>
+         <!--  Zeebe starter dependency    -->
+        <dependency>
+            <groupId>io.camunda</groupId>
+            <artifactId>spring-zeebe-starter</artifactId>
+            <version>${spring-zeebe.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
-
 
         <dependency>
 			<groupId>com.h2database</groupId>
@@ -61,6 +67,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+            <version>1.18.24</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -80,6 +87,7 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+                            <version>1.18.24</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
@@ -92,10 +100,24 @@
 						<exclude>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+                            <version>1.18.24</version>
 						</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <from>
+                        <image>eclipse-temurin:17-jre</image>
+                    </from>
+                    <to>
+                        <image>camunda-email-client-app:latest</image>
+                    </to>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
