--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
+        <version>3.5.7</version>
+		<relativePath/>
 	</parent>
 	<groupId>com.kevin.ameda</groupId>
 	<artifactId>Camunda</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Camunda</name>
-	<description>BPM Workflow management</description>
+	<description> SaaS Camunda Business Orchestration Tool</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -27,54 +27,40 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>17</java.version>
-        <camunda.version>7.24.0</camunda.version>
-        <spring-zeebe.version>8.1.5</spring-zeebe.version>
+		<java.version>21</java.version>
+        <zeebe.version>8.8.2</zeebe.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mail</artifactId>
-		</dependency>
+
+       <!--  Zeebe client    -->
+        <dependency>
+            <groupId>io.camunda</groupId>
+            <artifactId>camunda-spring-boot-starter</artifactId>
+            <version>${zeebe.version}</version>
+        </dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-        <!-- Camunda Spring Boot Starter -->
-        <dependency>
-            <groupId>org.camunda.bpm.springboot</groupId>
-            <artifactId>camunda-bpm-spring-boot-starter</artifactId>
-            <version>${camunda.version}</version>
-        </dependency>
-         <!--  Zeebe starter dependency    -->
-        <dependency>
-            <groupId>io.camunda</groupId>
-            <artifactId>spring-zeebe-starter</artifactId>
-            <version>${spring-zeebe.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
-        </dependency>
-
-        <dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-            <version>1.18.24</version>
 			<optional>true</optional>
 		</dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -87,7 +73,6 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
-                            <version>1.18.24</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
@@ -100,7 +85,6 @@
 						<exclude>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
-                            <version>1.18.24</version>
 						</exclude>
 					</excludes>
 				</configuration>
